# LABS

Cauchy_problem_for_system/: CMakeLists.txt
Cauchy_problem_for_system/include/: App.h  RKIV.h
Cauchy_problem_for_system/source/: Cauchy_problem_for_system.cpp
Computer_Graphics/: .gitignore
Computer_Graphics/Lesson_1/: CMakeLists.txt  main.cpp
Computer_Graphics/Lesson_2/: CMakeLists.txt
Computer_Graphics/Lesson_2/examples/: CMakeLists.txt
Computer_Graphics/Lesson_2/examples/src/: example_itkvtkdicom.cpp
Computer_Graphics/Lesson_3/: cornell_box.blend
Computer_Vision/: CMakeLists.txt
Computer_Vision/.scripts/: build.bat  build_lesson_1.bat  install_3rdparty_libs.bat
Computer_Vision/Lesson_1/: CMakeLists.txt  main.cpp
Computer_Vision/Lesson_2/: CMakeLists.txt  environment.yml  main.cpp  script.ipynb
Computer_Vision/Lesson_2/data/: conv.onnx  conv_net.onnx
Construction-of-an-interpolating-cubic-spline/: CMakeLists.txt
Construction-of-an-interpolating-cubic-spline/include/: App.h  Construction_of_an_interpolating_cubic_spline.h  Sweep_method.h
Construction-of-an-interpolating-cubic-spline/source/: Construction_of_an_interpolating_cubic_spline.cpp
Equations-and-systems-of-2nd-order-and-higher/: CMakeLists.txt
Equations-and-systems-of-2nd-order-and-higher/include/: App.h  RK_IV.h
Equations-and-systems-of-2nd-order-and-higher/libs/: CMakeLists.txt
Finite_element_method/: CMakeLists.txt  Finite_element_method.sln
Finite_element_method/Finite_element_method/: Finite_element_method.cpp  Finite_element_method.vcxproj  Finite_element_method.vcxproj.filters
Finite_element_method/Finite_element_method/x64/Debug/: Finite_element_method.exe.recipe  Finite_element_method.ilk  vc143.idb
Finite_element_method/Finite_element_method/x64/Debug/Finite_e.05f86275.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Finite_element_method.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Finite_element_method/source/: Finite_element_method.cpp
GMCG_LAB1/: Form1.Designer.cs  Form1.cs  GMCG_LAB1.csproj  GMCG_LAB1.sln  Program.cs
GMCG_LAB1/GMCG_LAB1/: Form1.Designer.cs  Form1.cs
GMCG_LAB2/: 2D_Second.cs  GMCG_LAB2.csproj  GMCG_LAB2.sln
GMCG_LAB2/GMCG_LAB2/: 2D_First.Designer.cs  2D_First.cs  3D.cs  Form1.Designer.cs  Form1.cs  GMCG_LAB2.csproj  Program.cs
GMCG_LAB3/: GMCG_LAB3.sln
GMCG_LAB3/GMCG_LAB3/: Ball.h  Balls.h  GMCG_LAB3.cpp  GMCG_LAB3.vcxproj  GMCG_LAB3.vcxproj.filters  Game.cpp  Game.h  Move.h  Room.h  Saper.h  Scene.h  Types.h  math_3d.h
GMCG_LAB3/source/: Game.h  Scene.h
Initial-Value-Problem-for-a-First-Order-Ordinary-Differential-Equation/: CMakeLists.txt
Initial-Value-Problem-for-a-First-Order-Ordinary-Differential-Equation/include/: App.h  RK_IV.h
Initial-Value-Problem-for-a-First-Order-Ordinary-Differential-Equation/source/: main.cpp
Lyakhov/: Lyakhov.sln
Lyakhov/Boundary_value_problem_for_ordinary_differential/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Lyakhov/Boundary_value_problem_for_ordinary_differentialC++/: Boundary_value_problem_for_ordinary_differentialC++.cpp  Boundary_value_problem_for_ordinary_differentialC++.vcxproj  Boundary_value_problem_for_ordinary_differentialC++.vcxproj.filters
Lyakhov/CauchyProblemForOrdinaryDifferentialEquations/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
MMDTT_LAB_2/: CMakeLists.txt  MMDTT_LAB_2.sln
MMDTT_LAB_2/MMDTT_LAB_2/: MMDTT_LAB_2.cpp  MMDTT_LAB_2.vcxproj  MMDTT_LAB_2.vcxproj.filters
MMDTT_LAB_2/data/: aroclolpezus.xlsx  bubtibusizhuz.txt  dadyy_bubtibusizhuz.txt  skvazimabzaza.txt
MMDTT_LAB_2/include/: MMDTT_LAB_2.h
MMDTT_LAB_2/source/: MMDTT.cpp  MMDTT_LAB_2.cpp
Machine_Learning/: Home_work_2025_11_24.ipynb  Home_work_practice_2025_11_24.ipynb  Practice_2025_10_11.ipynb
Methods-for-solving-the-unsteady-heat-equations/: CMakeLists.txt
Methods-for-solving-the-unsteady-heat-equations/include/: Sweep_method.h  UHE.h
Methods-for-solving-the-unsteady-heat-equations/src/: Methods_for_solving_the_unsteady_heat_equation.cpp
Metrichkin/: Metrichkin.sln
Metrichkin/Metrichkin/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Optimization_methods/: Optimization_methods.sln  ЛР.docx
Optimization_methods/Checking_correct_programming/: Checking_correct_programming.docx  calc_derivatives.m  calc_second_derivatives.m  func.m  grad.m  gradgess.m
Optimization_methods/Dichotomy_method/: Dichotomy_method.docx  ch_diho.m  drawfun.m  ftest.m
Optimization_methods/Fibonacci_method/: Fibonacci_method.docx  fibon.m  ftest.m
Optimization_methods/Golden_ratio_method/: Golden_ratio_method.docx  golden.m
Optimization_methods/Half_division_method/: Half_division_method.docx  ftest.m  half_div.m
Optimization_methods/One-step_gradient_methods/: One-step_gradient_methods.docx  ch_grad01.m  ch_grad02.m  ch_grad03.m  helper.m  lines1.m  lines2.m  lines3.m
Optimization_methods/Optimization_methods/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Optimization_methods.csproj
Optimization_methods/Quadratic_interpolation_method/: Quadratic_interpolation_method.docx  ch_quadint.m  drawfun.m
Optimization_methods/Visualization_of_grid_graph_and_level_lines/: Visualization_of_grid_graph_and_level_lines.docx  graf.m  lines.m  objfun01.m  (+1 more)
SOLUTION_OF_THE_DIRICHLET_PROBLEM_FOR_THE_POISSON_EQUATION/: Functions.cs  Gauss.cs  MNN.cs  MainTask.cs  Program.cs  SOLUTION_OF_THE_DIRICHLET_PROBLEM_FOR_THE_POISSON_EQUATION.sln  Template.Designer.cs  Template.cs  TestTask.cs
Scientific _programming/: Home_work_2025_10_30.ipynb  lesson_2025_10_09.ipynb  lesson_2025_10_16.ipynb  lesson_2025_10_23.ipynb  lesson_2025_10_30.ipynb
Solving-boundary-value-problems-for-ODEs/: CMakeLists.txt  imgui.ini
Solving-boundary-value-problems-for-ODEs/include/: App.h  Sweep_method.h
Solving-boundary-value-problems-for-ODEs/source/: Solving_boundary_value_problems_for_ODEs.cpp
Ter-Ver-lab-sem-6/: CMakeLists.txt  Отчет по ЛР ТерВер.docx
Ter-Ver-lab-sem-6/libs/: CMakeLists.txt
(+55 files in other folders)
